--- a/website/newsletter/201/index.mdx
+++ b/website/newsletter/201/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /201
-title: "This Week In React #201: TanStack, Remix, Next.js-SaaS-Starter, routing, ?search, decoupling, LLM, Astro, Redwood, Storybook, Conform, Nitro Modules, RN CSS, Re.Pack, Swift, VisionOS, Lottie, Node.js, TypeScript, Vite, date-fns"
+title: "This Week In React #201: TanStack, Remix, Next.js-SaaS-Starter, routing, ?search, decoupling, LLM, Astro, Redwood, Storybook, Conform, Nitro Modules, RN CSS, Re.Pack, Swift, VisionOS, Lottie, Node.js, TypeScript, Vite, date-fns..."
 authors: [slorber]
 date: 09-18-2024
 ---
