--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/201/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/201/index.mdx
@@ -5,7 +5,7 @@ authors: [slorber]
 date: 09-18-2024
 ---
 
-Salut à tous !
+Salut à tous ! TEST
 
 Another week with many interesting React community articles, notably around the TanStack.
 
