--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/201/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/201/index.mdx
@@ -7,13 +7,13 @@ date: 09-18-2024
 
 Salut à tous !
 
-Another week with many interesting React community articles, notably around the TanStack.
+Encore une semaine avec de nombreux articles intéressants de la communauté React, notamment autour de TanStack.
 
-We also have cool React Native announcements such as Nitro Modules.
+Nous avons également des annonces intéressantes concernant React Native, comme les modules Nitro.
 
-✍ Don't forget to sign this important petition: [Oracle, it's time to free JavaScript](https://javascript.tm/)
+✍ N'oubliez pas de signer cette importante pétition : [Oracle, il est temps de libérer JavaScript](https://javascript.tm/)
 
-Also check our partner conf 🗓 [React Summit US](https://reactsummit.us/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇺🇸 New-York \- 19 & 22 December. The great React Summit conference is back in the US for it's second edition!
+Consultez également notre conférence partenaire 🗓 [React Summit US](https://reactsummit.us/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇺🇸 New-York \- 19 & 22 décembre. La grande conférence React Summit est de retour aux États-Unis pour sa deuxième édition !
 
 <!-- truncate -->
 
@@ -47,14 +47,14 @@ Get set up and run your first scan in \<5 minutes. [Try for free](https://omlet.
 
 [![Introducing TanStack Router](/emails/issues/201/tanstack.jpg)](https://frontendmasters.com/blog/introducing-tanstack-router/)
 
-**TanStack news**
+**Les nouvelles de TanStack**
 
-I wasn't sure which headline to pick this week, so let's gather all TanStack-related news under one roof:
+Je ne savais pas quel titre choisir cette semaine, alors rassemblons toutes les nouvelles liées à TanStack dans un même endroit :
 
-- 📜 [Introducing TanStack Router](https://frontendmasters.com/blog/introducing-tanstack-router/): Great routing/navigation overview of this full-featured client-side framework that powers the upcoming TanStack Start framework (in alpha). It notably shines for its great typesafety for links, path segments and search parameters. I particularly like the idea of linking with `to=”/users/$id”` instead of `to=”/users/123”`.
-- 📜 [A milestone for TypeScript Performance in TanStack Router](https://tanstack.com/blog/tanstack-router-typescript-performance): Still related to TanStack Router, I also liked this post that dives deep into troubleshooting TypeScript performance problems in the language service, leading to slow IDE autocompletion.
-- 📜 [How Infinite Queries work](https://tkdodo.eu/blog/how-infinite-queries-work): Dominik from React Query explains how Infinite Queries work under the hood, using an elegant code architecture with a pluggable behavior logic. He also explains how he fixed an historical bug that was only reported recently, caused by the retry logic.
-- 👀 [Clerk TanStack start SDK (beta)](https://clerk.com/docs/quickstarts/tanstack-start): A third-party auth provider adding first-class auth support to the upcoming framework is a great sign of traction.
+- 📜 [Introducing TanStack Router](https://frontendmasters.com/blog/introducing-tanstack-router/) : Excellent aperçu du routage/de la navigation de ce framework client complet qui alimente le futur framework TanStack Start (en alpha). Il se distingue notamment par son excellente sécurité pour les liens, les segments de chemin et les paramètres de recherche. J'aime particulièrement l'idée de lier avec `to=”/users/$id”` au lieu de `to=”/users/123”`.
+- 📜 [A milestone for TypeScript Performance in TanStack Router](https://tanstack.com/blog/tanstack-router-typescript-performance) : Toujours en rapport avec TanStack Router, j'ai également aimé cet article qui plonge en profondeur dans le dépannage des problèmes de performance de TypeScript dans le service de langage, conduisant à une autocomplétion lente de l'IDE.
+- 📜 [How Infinite Queries work](https://tkdodo.eu/blog/how-infinite-queries-work) : Dominik de React Query explique comment les requêtes infinies fonctionnent sous le capot, en utilisant une architecture de code élégante avec une logique de comportement pluggable. Il explique également comment il a corrigé un bogue historique qui n'a été signalé que récemment, causé par la logique de relance.
+- 👀 [Clerk TanStack start SDK (beta)](https://clerk.com/docs/quickstarts/tanstack-start) : Un fournisseur d'authentification tiers qui ajoute un support d'authentification de premier ordre au framework à venir est un excellent signe de confiance.
 
 ---
 
