--- a/website/newsletter/202/index.mdx
+++ b/website/newsletter/202/index.mdx
@@ -10,11 +10,9 @@ Hi everyone!
 
 <Todo />
 
-*   🗓️ [React Summit US](https://reactsummit.us/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇺🇸 New-York - 19 & 22 December - [Free remote tickets are available now, click here !](https://gitnation.com/badges/react-summit-us-2024/addy_osmani?from=This+Week+In+React) 10% discount with code TWIR.
-    
-*   🗓️ [RNLConf](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) \- 🇬🇧 London - 14 & 15 November - Get a 10% discount with code "TWIR”, grab a ticket now !
-    
-*   🗓️ [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇬🇧 London - 25 & 28 October - Hurry and grab your ticket to the conference as prices are about to go up ! And fon’t forget your discount with code “TWIR”.
+- 🗓️ [React Summit US](https://reactsummit.us/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇺🇸 New-York - 19 & 22 December - [Free remote tickets are available now, click here !](https://gitnation.com/badges/react-summit-us-2024/addy_osmani?from=This+Week+In+React) 10% discount with code TWIR.
+- 🗓️ [RNLConf](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) \- 🇬🇧 London - 14 & 15 November - Get a 10% discount with code "TWIR”, grab a ticket now !
+- 🗓️ [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇬🇧 London - 25 & 28 October - Hurry and grab your ticket to the conference as prices are about to go up ! And fon’t forget your discount with code “TWIR”.
 
 <!-- truncate -->
 
@@ -36,14 +34,10 @@ import Support from "../_support.mdx";
 
 AG Grid is a fast, free and fully customisable React Data Grid. Used by **90% of the Fortune 500**, AG Grid is **100% open source** with over **4 million npm downloads per month**:
 
-*   🆓 **Free:** Access 100s of features such as **Sorting**, **Filtering**, **Pagination**, **Cell Editing** and more, all for **free** - forever.
-    
-*   **🚀 Fast:** Display **millions of cells** out of the box, without compromising on performance.
-    
-*   **🎨 Customisable:** Add your own components to cells, rows & columns and use **100+ CSS variables** to style every element.
-    
-*   🏢 **Enterprise Features:** Purchase a licence for lifetime access to advanced features including **Pivoting**, **Grouping**, **Master / Detail** and **Integrated Charts** (powered by our React Charting Library, [AG Charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-1)). Try it for free - no trial license required.
-    
+- 🆓 **Free:** Access 100s of features such as **Sorting**, **Filtering**, **Pagination**, **Cell Editing** and more, all for **free** - forever.
+- **🚀 Fast:** Display **millions of cells** out of the box, without compromising on performance.
+- **🎨 Customisable:** Add your own components to cells, rows & columns and use **100+ CSS variables** to style every element.
+- 🏢 **Enterprise Features:** Purchase a licence for lifetime access to advanced features including **Pivoting**, **Grouping**, **Master / Detail** and **Integrated Charts** (powered by our React Charting Library, [AG Charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-1)). Try it for free - no trial license required.
 
 Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-1)
 
@@ -51,9 +45,40 @@ Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thiswee
 
 ## ⚛️ React {#react}
 
-<Todo />
+- 📜 [How I Built My Blog](https://www.joshwcomeau.com/blog/how-i-built-my-blog-v2/): Josh Comeau shares his experience migrating an advanced blog (100k LOC) from the Next.js Pages Router to the App Router, with mitigated feedback (lower Lighthouse score, slower dev server…). It’s an interesting React read overall, presently presented, interactive, and not limited to Next.js users. Includes many details involving various dependencies: MDX, Shiki, Linaria, Framer-Motion…
+
+---
+
+- 📜 [Component Composition is great btw](https://tkdodo.eu/blog/component-composition-is-great-btw): Dominik explains how React redefined the concept of “Separation of Concerns” and why you should favor composition and early returns over rendering multiple states conditionally. I share the same experience: the component is more likely to remain maintainable over time this way.
+
+---
 
 - 💸 [React Component Analytics — Omlet Scans Your Codebase to Measure Component Usage to Increase Code Quality and Design Systems Adoption](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-aug-2024)
+- 👀 [Next.js PR \- `@next/codemod upgrade` CLI](https://github.com/vercel/next.js/pull/69935): Next.js 15 will have a CLI to automatically upgrade your dependencies to the latest stable, RC, or canary, with the ability to run the appropriate breaking change codemods.
+- 👀 [Next.js PR \- Update Dynamic APIs to be async](https://github.com/vercel/next.js/pull/68812): APIs like `cookies()`, `headers()`, `params` are going async in Next.js 15\. The PR is still WIP but [codemods have already been merged](https://github.com/vercel/next.js/pull/69572). The breaking change is not so well-received by the community but opens the way to upcoming innovations for the Next.js team.
+- 🔐 [Next.js Cache Poisoning vulnerability](https://github.com/advisories/GHSA-gp8f-8m3g-qvj9): Only affects Page Router non-dynamic routes, fixed in 13.5.7 and 14.2.9
+- 🧑‍🎓 [Vim for React Developers](https://vimforreactdevs.com/): Free pragmatic mini-course from Lee Robinson.
+- 🧑‍🎓 [EpicReact v2 \- React 19 update](https://www.epicreact.dev/): Kent C. Dodds released a new version of his flagship React course (paid, currently 40% off).
+- 📜 [How to control a React component with the URL](https://buildui.com/posts/how-to-control-a-react-component-with-the-url): This cool interactive blog post greatly illustrates a common antipattern among React devs using search parameters. You should consider the URL as the source of truth, instead of trying to sync your state to the URL.
+- 📜 [Partial Prerendering for Everyone with Cloudflare Workers](https://sunilpai.dev/posts/ppr-for-everyone/): Former React team member Sunil Pai shared a demo of implementing PPR from scratch outside of Next.js, using React `prerender()`, `postpone()` and `resumeToPipeableStream()`. These are very experimental APIs that may change, don’t do this at home and only use this for learning/curiosity.
+- 📜 [CSS `content-visibility` for React devs](https://dev.to/sebastienlorber/css-content-visibility-for-react-devs-4a3i): I aggregated a few interesting tweets/links explaining why React devs should care about this new CSS property that can improve your app rendering performance. It’s now in all browsers and although not widely supported, can be a progressive enhancement. You could use it as a replacement or alongside a React virtualization library to improve performance and accessibility.
+- 📜 [HTMX Essay \- You Can't Build Interactive Web Apps Except as Single Page Applications... And Other Myths](https://htmx.org/essays/you-cant/): An interesting read debunking myths and explaining what’s possible to do without an SPA framework like React. The gap between MPAs and SPAs is getting thinner thanks to modern technologies: Service Workers, View Transitions, Speculation Rules…
+- 📜 [How to fetch data in React](https://www.robinwieruch.de/react-fetching-data/): Robin Wieruch refreshed his data fetching overview post listing modern 2024 practices using React Query, useEffect, use(), RSC, and tRPC.
+- 📜 [Efficient Refresh Token Implementation with React Query and Axios](https://dev.to/elmehdiamlou/efficient-refresh-token-implementation-with-react-query-and-axios-f8d): Uses Axios interceptors to automatically add an `Authorization` header and React Query `onError` callback to refresh expired tokens and retry the query/mutation.
+- 📜 [How to reset the state of useActionState in React](https://www.nico.fyi/blog/reset-state-from-react-useactionstate): Resetting the action state is surprisingly tricky.
+- 📜 [From Parcel to Vite: A short story of a 100K LOC migration](https://blog.logto.io/parcel-to-vite): Logto migrated a React frontend to Vite and shared integration details on various React-related features: MDX, SVGR, `React.lazy`, Fast Refresh…
+- 📜 [Astro Content Layer \- A Deep Dive](https://astro.build/blog/content-layer-deep-dive/)
+- 📦 [Storybook 8.3](https://storybook.js.org/blog/storybook-8-3/): Includes a first-class Vitest integration that makes Component Testing x6 faster, and a better integration with Next.js projects.
+- 📦 [Priompt \- JSX-based prompt design library](https://www.cursor.com/blog/prompt-design): I missed that AI prompting library released last year by a Cursor dev.
+- 📦 [next-view-transitions 0.3.2 \- useTransitionRouter API](https://x.com/shuding_/status/1838000183356850240)
+- 📦 [Legend-State 3.0 beta \- Signal-based state library \- Improves on computed observables, persistence, sync](https://www.legendapp.com/open-source/state/v3/)
+- 📦 [Vaultusaurus \- Tools to integrate an Obsidian Vault with a Docusaurus site, including a graph view](https://github.com/chanjunren/vaultusaurus)
+- 🎥 [Jack Herrington \- I hacked ShadCN to Create Insane React Templates and Installers](https://www.youtube.com/watch?v=NP2ULDZxpd0): The CLI can be hijacked by writing/generating your own JSON update files.
+- 🎥 [Theo \- The React "head" Drama…](https://www.youtube.com/watch?v=qmM91SnSw8w): React 19 won’t deduplicate `<title>` tags for you and you still may want to use a lib like React Helmet.
+- 🎥 [ThePrimeTime \- Remix's Concurrent Submissions Are Fundamentally Flawed](https://www.youtube.com/watch?v=Tvms2DaG8UY)
+- 🎙️ [Frontend First 196 \- Tom Occhino on the future of React](https://www.youtube.com/watch?v=ktO2OqwvgEs): A look back at the many years of innovation at Facebook that led to the creation of RSC and Partial Prerendering as a North Star. From BigPipe to GraphQL/Relay to RSC.
+- 🎙️ [PodRocket \- TanStack and TanRouter with Tanner Linsley](https://podrocket.logrocket.com/tanstack-tanrouter-tanner-linsley)
+- 🎙️ [Syntax.fm 824 \- Taylor Otwell's opinions on PHP, React, Laravel and Lamborghini Memes](https://syntax.fm/show/824/taylor-otwell-s-opinions-on-php-react-laravel-and-lamborghini-memes)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -75,22 +100,43 @@ Apryse IDP simplifies data extraction from PDFs. Easily pull details from financ
 
 This section is authored by [Benedikt](https://twitter.com/bndkt).
 
-<Todo />
-
 - 💸 [Sonny Sangha - Build a Zoom 2.0 Clone with React Native](https://go.clerk.com/jBpMIuk)
+- 🐦 [React-Native-WebGPU on macOS demo](https://x.com/SaadNajmi/status/1838295375700201720)
+- 🐦 [Tzvetan Mikov about usefulness of adding Wasm support to Hermes](https://x.com/tmikov/status/1837600409386734037)
+- 📊 [React Native Benchmarking](https://dream-sports-labs.github.io/rn-benchmarking/): This interesting site allows us to compare the performance of React Native depending on version, architecture, and platform (iOS/Android)
+- 📜 [React Native IDE is now Radon IDE](https://blog.swmansion.com/react-native-ide-is-now-radon-ide-cfbdad77d43c): TL;DR it’s just a name change for practical reasons. Still fun to read why they choose that name (hint: atomic, Polonium)
+- 📜 [How to listen to uncaught/unhandled errors in React Native](https://andrei-calazans.com/posts/how-to-global-catch-errors/): with `globalThis.ErrorUtils.setGlobalHandler()`
+- 📜 [How to incrementally adopt Expo](https://expo.dev/blog/how-to-incrementally-adopt-expo)
+- 📦 [MiniSim 0.9 \- Physical devices support](https://github.com/okwasniewski/MiniSim/releases/tag/v0.9.0)
+- 📦 [React Native 0.76.0-rc.2](https://github.com/facebook/react-native/releases/tag/v0.76.0-rc.2)
+- 🎥 [Simon Grimm \- Why React Native 3D doesn't suck (anymore)](https://www.youtube.com/watch?v=msErROjFY08)
+- 🎙️ [React Universe On Air \- Coffee Talk 21 \- How to Get Started With 3D in React](https://www.youtube.com/watch?v=Olh_sE0BL1s)
+- 🎙️ [Rocket Ship 50 \- New Arch, JSI, Native Modules & Rust with Oscar Franco](https://share.transistor.fm/s/01c99662)
+- 🎙️ [RNR 308 \- Coding and ADHD with Chris Ferdinandi](https://www.reactnativeradio.com/episodes/rnr-308-coding-and-adhd-with-chris-ferdinandi)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [CSS Values and Units Level 5 \- First Public Working Draft](https://www.w3.org/blog/CSS/2024/09/13/css-values-5-fpwd/)
+- 👀 [CSS Grid Level 3 / Masonry Layout \- First Public Working Draft](https://www.w3.org/blog/CSS/2024/09/24/css-grid-3-fpwd/)
+- 🐦 [Web Preference API upstreamed to CSS Media Queries Draft Spec](https://x.com/sebastienlorber/status/1836698597548593350)
+- 📜 [9 Principles for Doing Node.js Right in Enterprise Environments](https://www.platformatichq.com/node-principles)
+- 📜 [Animate to height: auto; (and other intrinsic sizing keywords) in CSS](https://developer.chrome.com/docs/css-ui/animate-to-height-auto/)
+- 📜 [Why Typed Linting Needs TypeScript Today](https://www.joshuakgoldberg.com/blog/why-typed-linting-needs-typescript-today/)
+- 📦 [Bun 1.1.28 \- Compile and run C in JavaScript, fix React 19 SSR](https://bun.sh/blog/compile-and-run-c-in-js)
+- 📦 [ts-blank-space \- fast type-stripping compiler that converts TypeScript to JavaScript](https://bloomberg.github.io/ts-blank-space/)
+- 📦 [Deno 2.0 Release Candidate](https://deno.com/blog/v2.0-release-candidate)
+- 📦 [Module Federation Vite 1.0](https://www.learnbydo.ing/diary/2024-09-23-module-federation-vite-v1)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/202/meme.jpg)](https://x.com/Nateemerson/status/1836537823027134744)
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/202/meme2.jpg)](https://x.com/laszek44/status/1832024709887631384)
+
+[![alt](/emails/issues/202/meme3.jpg)](https://x.com/jarredsumner/status/1836438965664256399)
 
 See ya! 👋
